# pytaifex

./: .env.example  README.md  README_en.md  pyproject.toml
.github/workflows/: release-test.yml
notebooks/: auto_ui.ipynb
src/: main.py
src/pytaifex/: __init__.py  official_ttb.py
