[project]
name = "pytaifex"
version = "0.1.0"
description = "An wrapper of taifex official TTB api."
readme = "README.md"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "zmq>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab>=4.4.2"]
