[project]
name = "pytaifex"
version = "1.0.0"
description = "A Python wrapper for the official TTB API of the Taiwan Futures Exchange (TAIFEX)."
readme = "README.md"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["requests>=2.32.3", "zmq>=0.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab>=4.4.2"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
