[project]
name = "pytaifex"
version = "1.0.0"
description = "A Python wrapper for the official TTB API of the Taiwan Futures Exchange (TAIFEX)."
readme = "README.md"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "psutil>=7.2.2",
    "pywinauto>=0.6.9",
    "requests>=2.32.5",
    "zmq>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab>=4.5.6", "python-dotenv>=1.2.1"]
